[package]
name = "test-sqlx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
sqlx = { path = "../../sqlx", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.11.0", features = ["full"] }
